fix: make articles stretch full area height

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -61,7 +61,6 @@ ul {
   grid-row: 2 / -2;
 
   display: grid;
-  grid-template-rows: repeat(4, minmax(200px, 1fr));
   gap: 50px;
 }
 
